--- a/HTML/Admin.html
+++ b/HTML/Admin.html
@@ -17,12 +17,19 @@
    
     <h4>Nehmen Sie hier Ihre Einstellungen vor</h4>
 
-    <div>
-        <img src="http://placehold.it/250x150" alt="" />
-        <p>Hier steht später die Url des Bildes</p>
-        <button id="Löschen" type="button" ></button>
-    </div>
-
+    <table class="Einstellungen">
+        <thead>
+        </thead>
+        <tbody>
+            <tr>
+                <td><img src="http://placehold.it/250x150" alt="" /></td>
+                <td> <p>Hier steht später die Url des Bildes</p></td>
+                <td><button id="Löschen" type="button" ></button></td>
+            </tr>
+            <tr>
+        </tbody>
+    </table>
+  
     
 
 
