--- a/HTML/Spielergebnis.html
+++ b/HTML/Spielergebnis.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adminseite</title>
+    <title>Spielergebnis Seite</title>
     <link rel="stylesheet" href="../Style/style.css">
 </head>
 <header>
@@ -17,13 +17,15 @@
    
     <h4>Ihre Spieldauer</h4>
 
+    <video autoplay src="../Images/MemeMinions.mp4" controls></video>
+
     <p>Hier sehen Sie Ihre Spieldauer:</p>
     <input type="Zeit" name="placehold"><br>
 
     <p>Bitte tragen Sie hier Ihren Namen ein: </p>
     <input type="text" name="name" id="Name"><br>
 
-    <video src="../Images/Minions_wenig.mp4"></video>
+    
 
     <a href="../HTML/Score.html"><button id="Bestätigung"> Bestätigen und senden</button></a>
 
