--- a/HTML/Spieleseite.html
+++ b/HTML/Spieleseite.html
@@ -17,12 +17,6 @@
     <h2>Spieleseite</h2>
    
     <h4>Starten Sie Ihr Memory Spiel - mit dem ersten umdrehen einer Karte läuft Ihre Zeit</h4>
-    <div>
-        <p id= "PlaceholderDauer"> Hier läuft Ihre Spielzeit: <input type="Zeit" name="placehold"><br> </p> 
-        <button id="KartenUmdrehen"> Karten zurückdrehen</button>
-        
-    </div>
-  
     <table class="Memory">
         <thead>
         </thead>
@@ -32,7 +26,7 @@
                 <td><img class="Rückseite" src="https://cdn.pixabay.com/photo/2015/09/13/16/46/polka-dots-938427_1280.jpg" alt="" />
                     <img class="Bild" src="https://cdn.pixabay.com/photo/2014/11/12/21/18/strawberries-528791__480.jpg" alt="" /></td>
                 <td><img class="Rückseite" src="https://cdn.pixabay.com/photo/2015/09/13/16/46/polka-dots-938427_1280.jpg" alt="" />
-                    <img class="Bild" src="http://placehold.it/250x150" alt="" /></td> 
+                    <img class="Bild" src="https://cdn.pixabay.com/photo/2014/11/12/21/18/strawberries-528791__480.jpg" alt="" /></td> 
                 <td><img class="Rückseite" src="https://cdn.pixabay.com/photo/2015/09/13/16/46/polka-dots-938427_1280.jpg" alt="" />
                     <img class="Bild" src="http://placehold.it/250x150" alt="" /></td> 
                 <td><img class="Rückseite" src="https://cdn.pixabay.com/photo/2015/09/13/16/46/polka-dots-938427_1280.jpg" alt="" />
