Server Funktionen Grundaufbau

--- a/HTML/Admin.html
+++ b/HTML/Admin.html
@@ -17,6 +17,8 @@
    
     <h4>Nehmen Sie hier Ihre Einstellungen vor</h4>
 
+    <td><button id="Hinzufuegen" type="button" >Bilder hinzufügen</button></td>
+
     <table class="Einstellungen">
         <thead>
         </thead>
@@ -24,7 +26,7 @@
             <tr>
                 <td><img src="http://placehold.it/250x150" alt="" /></td>
                 <td> <p>Hier steht später die Url des Bildes</p></td>
-                <td><button id="Löschen" type="button" ></button></td>
+                <td><button id="Loeschen" type="button" ></button></td>
             </tr>
             <tr>
         </tbody>
