--- a/HTML/Spielergebnis.html
+++ b/HTML/Spielergebnis.html
@@ -27,7 +27,8 @@
 
     
 
-    <a href="../HTML/Score.html"><button id="Bestätigung"> Bestätigen und senden</button></a>
+
+    <a href="../HTML/Score.html"><button id="Abschicken"> Bestätigen und senden</button></a>
 
 
 </body>
