--- a/HTML/Spieleseite.html
+++ b/HTML/Spieleseite.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spieleseite</title>
-    <script src="../Client/Spieleseite.js" defer></script>
+    <script src="../Client/Spieleseite/Spieleseite.js" defer></script>
+    <script src="../Client/Spieleseite/InitMemory.js" defer></script>
     <link rel="stylesheet" href="../Style/style.css">
 </head>
 <header>
