Response zu Array????

--- a/HTML/Spieleseite.html
+++ b/HTML/Spieleseite.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spieleseite</title>
     <script src="../Client/Spieleseite/Spieleseite.js" defer></script>
-    <script src="../Client/Spieleseite/InitMemory.js" defer></script>
+    <script src="../Server/server.js" defer></script>
     <link rel="stylesheet" href="../Style/style.css">
 </head>
 <header>
