MemoryKarten Urls random ausgesucht, verdoppelt und gemischt

--- a/HTML/Spieleseite.html
+++ b/HTML/Spieleseite.html
@@ -24,9 +24,9 @@
         <tbody>
             <tr>
                 
-                <td><img class="Bild" src="https://cdn.pixabay.com/photo/2014/11/12/21/18/strawberries-528791__480.jpg" alt="" />
+                <td><img class="Bild" src="http://placehold.it/250x150"  alt="" />
                     <img class="Rueckseite" src="https://cdn.pixabay.com/photo/2015/09/13/16/46/polka-dots-938427_1280.jpg" alt="" /></td>
-                <td><img class="Bild" src="https://cdn.pixabay.com/photo/2014/11/12/21/18/strawberries-528791__480.jpg" alt="" />
+                <td><img class="Bild" src="http://placehold.it/250x150"  alt="" />
                     <img class="Rueckseite" src="https://cdn.pixabay.com/photo/2015/09/13/16/46/polka-dots-938427_1280.jpg" alt="" /></td>
                 <td><img class="Bild" src="http://placehold.it/250x150" alt="" />
                     <img class="Rueckseite" src="https://cdn.pixabay.com/photo/2015/09/13/16/46/polka-dots-938427_1280.jpg" alt="" /></td>
