Versucht die Placeholder jetzt mit meinem Bildern zu ersetzen...

--- a/HTML/Admin.html
+++ b/HTML/Admin.html
@@ -17,7 +17,12 @@
    
     <h4>Nehmen Sie hier Ihre Einstellungen vor</h4>
 
-    <td><button id="Hinzufuegen" type="button" >Bilder hinzufügen</button></td>
+
+    <h5>Fügen Sie hier die Url eines neuen Bildes ein, um es der Datenbank hinzuzufügen:</h5>  
+    <input type="text" name="Url">
+    <button id="Hinzufuegen" type="button" >Bestätigen und Bild hinzufügen</button>
+
+    <h5>Hier sehen Sie alle Bilder die momentan in der Datenbank vorhanden sind:</h5>
 
     <table class="Einstellungen">
         <thead>
