--- a/HTML/Spielergebnis.html
+++ b/HTML/Spielergebnis.html
@@ -15,7 +15,7 @@
     
     <h2>Ihr Spielergebnis</h2>
    
-    <h4>Ihre Spieldauer</h4>
+    <h4>Geschafft - Glückwunsch!</h4>
 
     <video autoplay src="../Images/MemeMinions.mp4" controls></video>
 
@@ -28,7 +28,7 @@
     
 
 
-    <a href="../HTML/Score.html"><button id="Abschicken"> Bestätigen und senden</button></a>
+    <a href="../HTML/Score.html"><button id="Abschicken"> Bestätigen und zur Highscore Übersicht</button></a>
 
 
 </body>
