--- a/HTML/Spielergebnis.html
+++ b/HTML/Spielergebnis.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spielergebnis Seite</title>
+    <script src="../Client/Spielergebnisseite/Spielergebnis.js" defer></script>
     <link rel="stylesheet" href="../Style/style.css">
 </head>
 <header>
@@ -20,7 +21,7 @@
     <video autoplay src="../Images/MemeMinions.mp4" controls></video>
 
     <p>Hier sehen Sie Ihre Spieldauer:</p>
-    <input type="Zeit" name="placehold"><br>
+    <label type="Zeit" id="Spielzeit">00:00</label> 
 
     <p>Bitte tragen Sie hier Ihren Namen ein: </p>
     <input type="text" name="name" id="Name"><br>
