--- a/HTML/Spielergebnis.html
+++ b/HTML/Spielergebnis.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spielergebnis Seite</title>
     <script src="../Client/Spielergebnisseite/Spielergebnis.js" defer></script>
+    <script src="../Server/server.js" defer></script>
     <link rel="stylesheet" href="../Style/style.css">
 </head>
 <header>
