AdminSeite alle Bilder anzeigen mit Url funktioniert
muss nur noch gestylt werden

--- a/HTML/Spieleseite.html
+++ b/HTML/Spieleseite.html
@@ -19,7 +19,10 @@
    
     <h4>Starten Sie Ihr Memory Spiel - mit dem ersten umdrehen einer Karte läuft Ihre Zeit</h4>
 
+    <h5>Ihre geclickten Karten drehen sich automatisch um, wenn sie nicht zusammen passen </h5>
     <a href="../HTML/Spielergebnis.html"><button id="Spieldauer"> Spielergebnis anschauen </button></a>
+
+   
     <table class="Memory">
         <thead>
         </thead>
@@ -67,6 +70,7 @@
             </tr>
         </tbody>
     </table>
+
 
     
 
