Hinzufügen Admin Seite funktioniert
Auf Admin HTML name des Inputs  hinzufügen und löschen war gleich...

--- a/HTML/Score.html
+++ b/HTML/Score.html
@@ -22,9 +22,7 @@
 <table class="Highscore">
    <thead>
        <tr>
-           <th> Rangplätze 1-5 </th>
-           <th> Namen </th>
-           <th> Rangplätze 6-10 </th>
+           <th> Rangplätze </th>
            <th> Namen </th>
        </tr>
    </thead>
@@ -32,34 +30,43 @@
        <tr>
            <td>Platz 1</td>
            <td> Name </td>
-           <td>Platz 6</td>
-           <td> Name </td>
        </tr>
        <tr>
             <td>Platz 2</td>
-            <td> Name </td>
-            <td>Platz 7</td>
             <td> Name </td>
         </tr>
         <tr>
             <td>Platz 3</td>
             <td> Name </td>
-            <td>Platz 8</td>
-            <td> Name </td>
         </tr>
         <tr>
             <td>Platz 4</td>
-            <td> Name </td>
-            <td>Platz 9</td>
             <td> Name </td>
         </tr>
         <tr>
             <td>Platz 5</td>
             <td> Name </td>
+        </tr>
+        <tr>
+            <td>Platz 6</td>
+            <td> Name </td>
+        </tr>
+        <tr>
+            <td>Platz 7</td>
+            <td> Name </td>
+        </tr>
+        <tr>
+            <td>Platz 8</td>
+            <td> Name </td>
+        </tr>
+        <tr>
+            <td>Platz 9</td>
+            <td> Name </td>
+        </tr>
+        <tr>
             <td>Platz 10</td>
             <td> Name </td>
         </tr>
-
    </tbody>
 </table>
 
