--- a/HTML/Spielergebnis.html
+++ b/HTML/Spielergebnis.html
@@ -27,7 +27,7 @@
     <label type="Zeit" id="Spielzeit">00:00</label> 
     
     <p>Bitte tragen Sie hier Ihren Namen ein: </p>
-    <input type="text" name="name" id="Name"><br>
+    <input type="text" name="spielername" id="Name"><br>
 
     <a href="../HTML/Score.html"><button id="Abschicken"> Bestätigen und zur Highscore Übersicht</button></a>
 
