FUNKTIONSFÄHIG und weiter gestylt

--- a/HTML/Spielergebnis.html
+++ b/HTML/Spielergebnis.html
@@ -24,14 +24,16 @@
     <video autoplay src="../Images/MemeMinions.mp4" controls></video>
 
     <p>Hier sehen Sie Ihre Spieldauer:</p>
-    <label type="Zeit" id="Spielzeit">00:00</label> 
+    <label id="Spielzeit">00:00</label> 
     
     <p>Bitte tragen Sie hier Ihren Namen ein: </p>
     <input type="text" name="spielername" id="Name"><br>
 
+    </form>
+
     <a href="../HTML/Score.html"><button id="Abschicken"> Bestätigen und zur Highscore Übersicht</button></a>
 
-    </form>
+   
 
 </body>
 </html>
