--- a/HTML/Spielergebnis.html
+++ b/HTML/Spielergebnis.html
@@ -26,7 +26,7 @@
     <p>Bitte tragen Sie hier Ihren Namen ein: </p>
     <input type="text" name="spielername" id="Name"><br>
 
-    <a href="../HTML/Score.html"><button id="Abschicken"> Bestätigen und zur Highscore Übersicht</button></a>
+    <button id="Abschicken"> Bestätigen und zur Highscore Übersicht</button>
 
    
 
